<resources>

    <string name="app_name" translatable="false">VehicleDocDB</string>
    <string name="action_settings">Settings</string>
    <string name="new_requeriments_button">New Requirement</string>
    <string name="new_incidents_button">New Incidents</string>
    <string name="view_inicents_chart">View Incident Chart</string>

    <!-- Requirements -->
    <string name="requirement_name">Name</string>
    <string name="requirement_date">Alarm Date</string>
    <string name="requirement_create">Create</string>

    <!-- Requirement Errors -->

    <string name="requirement_error">This field cannot be empty</string>


    <!-- Incidents -->
    <string name="incident_name">Name</string>
    <string name="incident_description">Description</string>
    <string name="incident_date">Incident Date</string>
    <string name="incident_price">Price</string>
    <string name="incident_create">Create</string>

    <!-- Incident Errors -->

    <string name="incident_error">This field cannot be empty</string>


    <!-- Incident Types -->

    <string-array name="incident_types">
        <item>Inspection</item>
        <item>Repair</item>
        <item>Gas</item>
    </string-array>

    <string name="incident_inspection">Inspection</string>
    <string name="incident_repair">Repair</string>
    <string name="incident_gas">Gas</string>
    <string name="incident">Incident</string>
    <string name="requirement">Requirement</string>
    <string name="incidents_chart">Incidents Chart</string>
    <string name="incident_list_by_category">Incident List</string>
    <string name="incident_type">Incident type</string>


</resources>
