<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.vehicledocdb.vehicledocdb.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_inicents_chart"
            android:id="@+id/view_incident_chart_button"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/colorPrimary"
            android:backgroundTintMode="multiply"
            android:textColor="@android:color/white" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_requeriments_button"
                android:id="@+id/requirementButton"
                android:layout_weight="1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="multiply"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_incidents_button"
                android:id="@+id/incidentButton"
                android:layout_weight="1"
                android:layout_above="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="multiply"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/listView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
